# simple-module-scanner

./: .gitmodules  CMakeLists.txt
src/: sms.cpp
